src/components/style/About.css
.header-image {
  width: 100%;
  margin-top: -2em;
  margin-bottom: 2em;
}

.about-profile-pic {
  float: left;
  margin: 0 1em 1em 0;
}

.container {
  margin: auto;
  width: 50%;
}

.text-center {
  padding-bottom: 20px;
}

h4 {
  text-align: center;
}

.s-cards {
  text-align: center;
}

#divisions {
  background-image: linear-gradient(white, pink);
}

#technology {
  background-image: linear-gradient(white, lightblue);
}

